--- a/HKCR.API/appsettings.json
+++ b/HKCR.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CourseworkDB": "Host=localhost;Database=HKCR;Username=postgres;Password=Ranjan;"
+    "CourseworkDB": "Host=localhost;Database=HKCR;Username=postgres;Password=sandesh;"
   },
   "AllowedHosts": "*"
 }
