--- a/HKCR.Infra/HKCR.Infra.csproj
+++ b/HKCR.Infra/HKCR.Infra.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\HKCR.Application\HKCR.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
