--- a/HKCR.API/appsettings.json
+++ b/HKCR.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "CourseworkDB": "Host=localhost;Database=HKCR;Username=postgres;Password=Ranjan;"
+    "CourseworkDB": "Host=localhost;Database=HKCR;Username=postgres;Password=Ranjan;",
+    "jwtSecret": "Tom-Most-Secret-Thing-In-The-World"
   },
   "AllowedHosts": "*"
 }
