ali ali changes

--- a/HKCR.API/appsettings.json
+++ b/HKCR.API/appsettings.json
@@ -9,5 +9,10 @@
     "CourseworkDB": "Host=localhost;Database=HKCR;Username=postgres;Password=Ranjan;",
     "jwtSecret": "Tom-Most-Secret-Thing-In-The-World"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "dg8j5cck1",
+    "ApiKey": "257774814993417",
+    "ApiSecret": "J93nr_PWFg2-9PqxkTQ761fErdc"
+  }
 }
